# single_cell

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml  pyproject_test.toml  requirements.txt  requirements_gui.txt
.dvc/: config
config/: MF5v1_plate_layout.json  README.md  config.yaml  data_quality_config.yaml  feature_extraction_config.yaml  feature_to_mcherry_config.yaml  inference_config.yaml  morphology_informativeness_config.yaml  postprocessing_config.yaml  preprocessing_config.yaml  visualization_config.yaml  wavelength_config.yaml
data_versioning/processed_hashes/: processed_hash_index.json
data_versioning/raw/: Ew2-1 MF5V1 0-72h 06-03-26.md5  Ew2-2 MF5V1 072h 17-04-26.md5  HD1509 MF5V1 0-72h 23-02-26.md5  HD1883 MF5V1 0-72h 20-03-26.md5  SA110 MF5V1 0-72h 13-02-26.md5  raw_manifest_index.json
documentation/: CONFIGURATION.md  DATASET.md  DATA_VERSIONING.md  MODULES.md  USAGE.md
examples/: complete_usage_examples.py  inference_example.py  postprocessing_examples.py  tracking_processor_examples.py  training_examples.py
notebooks/: 00_data_filter.ipynb  00_data_preparation.ipynb  00_dataset_summary.ipynb  00b_headless_data_visualization.ipynb  01_blur_measurement_comparison.ipynb  01_data_preparation.ipynb  01_data_preprocessing.ipynb  02_cellpose_inference.ipynb  06_feature_extraction.ipynb
scripts/: API_USAGE.md  README.md  SCRIPTS_REFERENCE.md  TROUBLESHOOTING.md  hash_processed_tier2.py  launch_gui_safe.py  migrate_label_id_to_cell_id.py  pipeline_status.py  run_activity_labeler.py  run_data_quality_extremes.py  run_data_quality_well_timepoint_report.py  run_evaluation.py  run_feature_extraction.py  run_feature_to_mcherry.py  run_inference.py  run_mcherry_metrics.py  run_morphology_informativeness.py  run_pipeline.py  run_postprocessing.py  run_preprocessing.py  run_tracking_pipeline.py  summarize_processed_data.py  track_3d_cells.py
src/: __init__.py  analyze_tif_labels.py  cellpose_2D_prediction.py  cellpose_2D_train.py  cellpose_3D_pred TODO.py  cellpose_3D_train.py  make_train_3D.py  omnipose_2D_pred.py  omnipose_3D_funetune_todo.py  omnipose_3D_pred.py  omnipose_3D_train.py  reformat_data.py  train_test_split.py
src/cell_activity_labeler/: __init__.py  __main__.py  napari.yaml  pyproject.toml
src/cell_activity_labeler/analytics/: __init__.py  activity_plots.py  comparison.py  distributions.py  label_summary.py
src/cell_activity_labeler/config/: __init__.py  models.py  validation.py
src/cell_activity_labeler/core/: __init__.py  classifier.py  image_writer.py  labeler.py  plotting.py  preprocessing.py  strategies.py  summaries.py  thresholding.py
src/cell_activity_labeler/frontends/: __init__.py  base.py
src/cell_activity_labeler/frontends/cli/: __init__.py  run_labeler.py
src/cell_activity_labeler/frontends/voila/: __init__.py  dashboard.py
src/cell_activity_labeler/io/: __init__.py  exporters.py  loaders.py
src/cell_activity_labeler/notebooks/: cell_activity_statistics.ipynb  misc.ipynb
src/cell_activity_labeler/ui/: __init__.py  image_viewer_widget.py  napari_viewer.py  widget.py  widget_utils.py
src/cell_activity_labeler/utils/: __init__.py  df_utils.py  export.py  file_utils.py  log.py  validation.py  workflow.py
src/dataset_analysis/: __init__.py  image_quality_metrics.py  inventory.py  layout.py  plotting.py  processed_inventory.py  qc.py  run_manifest.py  summary.py
src/evaluation/: __init__.py  evaluation_pipeline.py  file_matching.py  instance_metrics.py  pixel_metrics.py  plotting.py
src/feature_extraction/: README.md  __init__.py  feature_extraction_pipeline.py  feature_extractor.py  feature_extractor_2d.py  feature_extractor_incarta.py  feature_extractor_pyradiomics.py  feature_extractor_regionprops.py  feature_extractor_scportrait.py  feature_list_2d.txt  feature_list_3d.txt  requirements-scportrait.txt
src/feature_to_mcherry/: __init__.py  config.py  pipeline.py
src/feature_visualization/: __init__.py  data_manager.py  exporters.py  extended_config.py  performance_optimizations.py  plotters.py  visualization_base.py  visualizer.py
src/inference/: README.md  __init__.py  base_predictor.py  cellpose_predictor.py  inference_pipeline.py  output_manager.py
src/mcherry_metrics/: __init__.py  __main__.py
src/postprocessing/: README.md  TRACKING_PROCESSOR_README.md  __init__.py  blur_filtering.py  cell_tracking.py  pipeline.py  tracking_processor.py
src/preprocessing/: README.md  __init__.py  blur_analysis.py  blur_measure.py  dataset_split.py
src/threshold_activity_classifier/: __init__.py  napari.yaml  pyproject.toml
src/util/: blur_measure.py  converter_2d_3d.py  file_renamer.py  track_cells.py  train_test_split.py
src/utils/: __init__.py  blur_measure.py  cell_tracking.py  config.py  config_schemas.py  conversion.py  dimensionality_reduction.py  feature_list.py  file_utils.py  image_utils.py  logging_utils.py  run_manifest.py  track_cells.py  train_test_split.py  visualization_utils.py
src/visualize/: README.md  README_ADVANCED.md  README_GUI.md  __init__.py  browse.py  headless_layers.py  paths.py  qt_config.py  segmentation_gui.py  view_3d_tiff.py  view_4d_tiff.py  visualize_prediction.py
tests/: __init__.py  conftest.py  test_integration.py  test_training_system.py
tests/cell_activity_labeler/: test_loaders.py
tests/dataset_analysis/: __init__.py  test_dataset_analysis.py  test_processed_hash.py  test_processed_inventory.py  test_run_manifest.py
tests/feature_extraction/: test_feature_extractor_2d.py  test_feature_extractor_scportrait.py  test_image_mask_pairing.py  test_process_batch_parallel.py  test_scportrait_mask_export.py
tests/feature_to_mcherry/: test_contract.py  test_cv.py  test_join.py  test_linear_quantile.py  test_loaders.py  test_metrics.py  test_pipeline.py  test_ridge.py
tests/features/: conftest.py  test_feature_extractor_2d.py  test_integration.py  test_runner.py
tests/fixtures/: conftest.py
tests/inference/: __init__.py  test_base_predictor.py  test_cellpose_predictor.py  (+3 more)
util/: file_renamer.py  tif_to_png.py
(+119 files in other folders)
