[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "single-cell-analysis"
version = "0.1.0"
description = "Single cell segmentation, tracking, and feature extraction pipeline for brightfield microscopy"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Serena Sritharan", email = "serena.sritharan@helmholtz-munich.de"},
]
keywords = ["microscopy", "cell-segmentation", "cell-tracking", "cellpose", "brightfield"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "tifffile>=2021.7.2",
    "zarr>=2.10.0",
    "numcodecs>=0.9.0",
    "Pillow>=8.3.0",
    "imageio>=2.9.0",
    "opencv-python>=4.5.0",
    "trackpy>=0.5.0",
    "SimpleITK>=2.1.0",
    "tqdm>=4.62.0",
    "PyYAML>=5.4.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.7.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
    "plotly>=5.0.0",
    "bokeh>=2.3.0",
    "voila>=0.5.0",
    "bqplot>=0.12.0",
    "ipympl>=0.8.0",
    "papermill>=2.4.0",
]
gui = [
    "napari[all]>=0.4.15",
    "PyQt5>=5.15.0",
    "PyQt5-Qt5>=5.15.0",
    "qtpy>=2.3.0",
    "dask[array]>=2023.1.0",
]
visualization = [
    "umap-learn>=0.5.0",
    "tensorboard>=2.7.0",
]
gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]
classifier = [
    "cell-activity-labeler[napari,jupyter]",
]
sam = [
    "cellpose>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/helmholtz/single-cell-analysis"
"Bug Reports" = "https://github.com/helmholtz/single-cell-analysis/issues"
"Source" = "https://github.com/helmholtz/single-cell-analysis"

[project.scripts]
single-cell-pipeline = "scripts.run_pipeline:main"

[tool.uv.sources]
cell-activity-labeler = { path = "src/cell_activity_labeler" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | github
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that require significant resources",
    "gpu: Tests that require GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
# Match the tested primary runtime (3.10). 3.8/3.9 are too low for mypy to parse
# some installed deps: torch uses match statements (3.10+) and zarr v3 uses PEP
# 695 generics (3.12+), both of which crash mypy under a lower target.
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "cellpose.*",
    "trackpy.*",
    "radiomics.*",
    "napari.*",
    "tifffile.*",
]
ignore_missing_imports = true
