[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cell-activity-labeler"
version = "0.2.0"
description = "Threshold-based cell activity classification for microscopy images"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Serena Sritharan", email = "serena.sritharan@helmholtz-munich.de"},
]
keywords = ["microscopy", "cell-classification", "threshold", "napari", "image-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "tifffile>=2021.7.2",
    "tqdm>=4.62.0",
    "PyYAML>=5.4.0",
    "voila>=0.5.11",
    "imagecodecs>=2024.12.30",
]

[project.optional-dependencies]
napari = [
    "napari[all]>=0.4.15",
    "ipywidgets>=7.6.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
    "voila>=0.4.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.7.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]
all = [
    "cell-activity-labeler[napari,jupyter,dev]",
]

[project.urls]
"Homepage" = "https://github.com/seras3141/cell-activity-labeler"
"Bug Reports" = "https://github.com/seras3141/cell-activity-labeler/issues"
"Source" = "https://github.com/seras3141/cell-activity-labeler"

[project.entry-points."napari.manifest"]
cell-activity-labeler = "cell_activity_labeler:napari.yaml"

[tool.setuptools.packages.find]
where = ["."]
include = ["cell_activity_labeler*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=cell_activity_labeler"
